[tool.poetry]
name = "playground"
version = "0.1.0"
description = ""
authors = ["Chris Withers <chris@withers.org>"]

[tool.poetry.dependencies]
python = "*"
sphinx = "^1.8"
pkginfo = "^1.4"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.6"
codecov = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
